--- a/DGE_analysis/unified_data_DGE_analysis.ipynb
+++ b/DGE_analysis/unified_data_DGE_analysis.ipynb
@@ -2,9 +2,125 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n",
+      "Loading required package: S4Vectors\n",
+      "Loading required package: stats4\n",
+      "Loading required package: BiocGenerics\n",
+      "Loading required package: parallel\n",
+      "\n",
+      "Attaching package: ‘BiocGenerics’\n",
+      "\n",
+      "The following objects are masked from ‘package:parallel’:\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    combine, intersect, setdiff, union\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    anyDuplicated, append, as.data.frame, basename, cbind, colnames,\n",
+      "    dirname, do.call, duplicated, eval, evalq, Filter, Find, get, grep,\n",
+      "    grepl, intersect, is.unsorted, lapply, Map, mapply, match, mget,\n",
+      "    order, paste, pmax, pmax.int, pmin, pmin.int, Position, rank,\n",
+      "    rbind, Reduce, rownames, sapply, setdiff, sort, table, tapply,\n",
+      "    union, unique, unsplit, which, which.max, which.min\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘S4Vectors’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    first, rename\n",
+      "\n",
+      "The following object is masked from ‘package:tidyr’:\n",
+      "\n",
+      "    expand\n",
+      "\n",
+      "The following object is masked from ‘package:base’:\n",
+      "\n",
+      "    expand.grid\n",
+      "\n",
+      "Loading required package: IRanges\n",
+      "\n",
+      "Attaching package: ‘IRanges’\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    collapse, desc, slice\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    reduce\n",
+      "\n",
+      "Loading required package: GenomicRanges\n",
+      "Loading required package: GenomeInfoDb\n",
+      "Loading required package: SummarizedExperiment\n",
+      "Loading required package: Biobase\n",
+      "Welcome to Bioconductor\n",
+      "\n",
+      "    Vignettes contain introductory material; view with\n",
+      "    'browseVignettes()'. To cite Bioconductor, see\n",
+      "    'citation(\"Biobase\")', and for packages 'citation(\"pkgname\")'.\n",
+      "\n",
+      "Loading required package: DelayedArray\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "The following objects are masked from ‘package:Biobase’:\n",
+      "\n",
+      "    anyMissing, rowMedians\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "Loading required package: BiocParallel\n",
+      "\n",
+      "Attaching package: ‘DelayedArray’\n",
+      "\n",
+      "The following objects are masked from ‘package:matrixStats’:\n",
+      "\n",
+      "    colMaxs, colMins, colRanges, rowMaxs, rowMins, rowRanges\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    aperm, apply, rowsum\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(DESeq2)\n",
@@ -13,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +171,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "run_DESeq_and_get_results <- function(dds) {\n",
     "    #We want results without outlier removal or independent filtering since filtering should happen downstream.\n",
     "    #See docs: https://bioconductor.org/packages/devel/bioc/vignettes/DESeq2/inst/doc/DESeq2.html#how-can-i-get-unfiltered-deseq2-results\n",
-    "    dds_seq <- DESeq(dds, minReplicatesForReplace = Inf, parallel = TRUE)\n",
+    "    dds_seq <- DESeq(dds, parallel = TRUE)\n",
     "    res <- results(\n",
     "        dds_seq,\n",
     "        contrast = c(\"condition\", \"tumor\", \"healthy\"),\n",
     "        pAdjustMethod = \"BH\",\n",
-    "        cooksCutoff=FALSE,\n",
-    "        independentFiltering=FALSE,\n",
     "        parallel = TRUE\n",
     "    )\n",
     "    return(as_tibble(res, rownames = \"geneID\"))\n",
@@ -84,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,18 +323,16 @@
      "text": [
       "converting counts to integer mode\n",
       "Warning message in DESeqDataSet(se, design = design, ignoreRank):\n",
-      "“some variables in design formula are characters, converting to factors”converting counts to integer mode\n",
-      "Warning message in DESeqDataSet(se, design = design, ignoreRank):\n",
       "“some variables in design formula are characters, converting to factors”"
      ]
     }
    ],
    "source": [
-    "dds_naive <- DESeqDataSetFromMatrix(\n",
-    "    countData = counts,\n",
-    "    colData = coldata,\n",
-    "    design = ~ condition\n",
-    ")\n",
+    "# dds_naive <- DESeqDataSetFromMatrix(\n",
+    "#     countData = counts,\n",
+    "#     colData = coldata,\n",
+    "#     design = ~ condition\n",
+    "# )\n",
     "\n",
     "dds_informed <- DESeqDataSetFromMatrix(\n",
     "    countData = counts,\n",
@@ -231,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,16 +355,16 @@
       "gene-wise dispersion estimates: 16 workers\n",
       "mean-dispersion relationship\n",
       "final dispersion estimates, fitting model and testing: 16 workers\n",
-      "estimating size factors\n",
+      "-- replacing outliers and refitting for 2020 genes\n",
+      "-- DESeq argument 'minReplicatesForReplace' = 7 \n",
+      "-- original counts are preserved in counts(dds)\n",
       "estimating dispersions\n",
-      "gene-wise dispersion estimates: 16 workers\n",
-      "mean-dispersion relationship\n",
-      "final dispersion estimates, fitting model and testing: 16 workers\n"
+      "fitting model and testing\n"
      ]
     }
    ],
    "source": [
-    "dge_res_naive_df <- run_DESeq_and_get_results(dds_naive)\n",
+    "# dge_res_naive_df <- run_DESeq_and_get_results(dds_naive)\n",
     "dge_res_informed_df <- run_DESeq_and_get_results(dds_informed)"
    ]
   },
@@ -265,40 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "11775"
+       "4648"
       ],
       "text/latex": [
-       "11775"
+       "4648"
       ],
       "text/markdown": [
-       "11775"
+       "4648"
       ],
       "text/plain": [
-       "[1] 11775"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "4624"
-      ],
-      "text/latex": [
-       "4624"
-      ],
-      "text/markdown": [
-       "4624"
-      ],
-      "text/plain": [
-       "[1] 4624"
+       "[1] 4648"
       ]
      },
      "metadata": {},
@@ -306,9 +400,9 @@
     }
    ],
    "source": [
-    "sig_dge_res_naive_df <- dplyr::filter(dge_res_naive_df, padj < 0.05)\n",
+    "# sig_dge_res_naive_df <- dplyr::filter(dge_res_naive_df, padj < 0.05)\n",
     "sig_dge_res_informed_df <- dplyr::filter(dge_res_informed_df, padj < 0.05)\n",
-    "nrow(sig_dge_res_naive_df)\n",
+    "# nrow(sig_dge_res_naive_df)\n",
     "nrow(sig_dge_res_informed_df)"
    ]
   },
@@ -321,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
