--- a/figures/poster_2021_figure_1.ipynb
+++ b/figures/poster_2021_figure_1.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "decreased-concentrate",
+   "id": "pacific-kitchen",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wound-miniature",
+   "id": "organizational-newcastle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "serious-detective",
+   "id": "radical-garlic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "minimal-emission",
+   "id": "protective-scanner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "legislative-anthony",
+   "id": "statistical-calculation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "alpha-dance",
+   "id": "infrared-humor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "opposite-diagnosis",
+   "id": "packed-rabbit",
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "magnetic-bacteria",
+   "execution_count": 8,
+   "id": "digital-executive",
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "prostate-trauma",
+   "execution_count": 9,
+   "id": "boolean-needle",
    "metadata": {},
    "outputs": [
     {
@@ -256,18 +256,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "front-weekend",
+   "execution_count": 11,
+   "id": "preliminary-wednesday",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(fig_1, filename = paste0(dirs$figures_dir, \"/one_off/bmes_figure_1.png\"), dpi = dpi, height = 6, width = 12)"
+    "ggsave(fig_1, filename = paste0(dirs$figures_dir, \"/one_off/poster_figure_1.png\"), dpi = dpi, height = 6.5, width = 12.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "national-holly",
+   "id": "reverse-municipality",
    "metadata": {},
    "outputs": [],
    "source": []
