--- a/figures/poster_2021_figure_2.ipynb
+++ b/figures/poster_2021_figure_2.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eligible-combine",
+   "id": "fleet-whole",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "corrected-canadian",
+   "id": "clinical-architect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "exciting-demonstration",
+   "execution_count": 3,
+   "id": "small-confirmation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "visible-genome",
+   "id": "alert-maryland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "excess-correspondence",
+   "id": "incorporate-garden",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "parallel-weather",
+   "id": "cheap-stuart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "noticed-stationery",
+   "execution_count": 7,
+   "id": "caring-offering",
    "metadata": {},
    "outputs": [
     {
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "million-grace",
+   "execution_count": 8,
+   "id": "satisfied-kernel",
    "metadata": {},
    "outputs": [
     {
@@ -303,19 +303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "light-rolling",
+   "execution_count": 9,
+   "id": "correct-stamp",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1.png\"), dpi = dpi, height = fig1_ht, width = fig1_wd)\n",
-    "ggsave(fig_2, filename = paste0(dirs$figures_dir, \"/one_off/bmes_figure_2.png\"), dpi = dpi, height = 6, width = 10)"
+    "ggsave(fig_2, filename = paste0(dirs$figures_dir, \"/one_off/poster_figure_2.png\"), dpi = dpi, height = 6, width = 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bridal-madonna",
+   "id": "processed-still",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "received-accused",
+   "id": "loved-structure",
    "metadata": {},
    "outputs": [],
    "source": []
