--- a/figures/poster_2021_figure_4.ipynb
+++ b/figures/poster_2021_figure_4.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "japanese-paragraph",
+   "id": "increasing-canberra",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "formal-rabbit",
+   "id": "upset-spread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "humanitarian-engine",
+   "id": "prescription-dynamics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spare-proposition",
+   "id": "present-visiting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hired-english",
+   "id": "opposite-floating",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pacific-melissa",
+   "id": "cutting-nigeria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "hundred-manor",
+   "id": "inappropriate-wilson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "presidential-transsexual",
+   "execution_count": 8,
+   "id": "insured-tribe",
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fundamental-department",
+   "execution_count": 9,
+   "id": "voluntary-continent",
    "metadata": {},
    "outputs": [
     {
@@ -341,19 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fifteen-pledge",
+   "execution_count": 12,
+   "id": "defined-program",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ggsave(fig1, filename = paste0(dirs$figures_dir, \"/paneled/figure1.png\"), dpi = dpi, height = fig1_ht, width = fig1_wd)\n",
-    "ggsave(fig_4, filename = paste0(dirs$figures_dir, \"/one_off/bmes_figure_4.png\"), dpi = dpi, height = 4, width = 10)"
+    "ggsave(fig_4, filename = paste0(dirs$figures_dir, \"/one_off/poster_figure_4.png\"), dpi = dpi, height = 5, width = 12.5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "jewish-breakdown",
+   "id": "eleven-youth",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "million-difference",
+   "id": "little-rates",
    "metadata": {},
    "outputs": [],
    "source": []
